--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">EarGuard</string>
 
-    <string name="toggle_turn_on">Turn On</string>
-    <string name="toggle_turn_off">Turn Off</string>
+    <string name="toggle_turn_on"></string>
+    <string name="toggle_turn_off"></string>
 </resources>
