--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">EarGuard</string>
 
     <string name="calibration">Calibration.</string>
-    <string name="calibrate_now">Calibrate now.</string>
 
     <string name="toggle_turn_on"></string>
     <string name="toggle_turn_off"></string>
+
+    <string name="settings">Settings.</string>
+    <string name="user_details">User Details</string>
 </resources>
