--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <string name="settings">Settings.</string>
     <string name="user_details">User Details</string>
+    <string name="workgroup">Workgroup</string>
+
+    <string name="GroupWarning">Danger ! Noise level is too high!</string>
+
 </resources>
