--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">EarGuard</string>
+    
+    <string name="facebook_app_id">1209923379028001</string>
 
     <string name="calibration">Calibration.</string>
 
