equation for dB estimation can now be computed from manually entered measures

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     
     <string name="facebook_app_id">1209923379028001</string>
 
-    <string name="calibration">Automatic Calibration.</string>
+    <string name="calibration">Calibrate.</string>
 
     <string name="toggle_turn_on"></string>
     <string name="toggle_turn_off"></string>
